# graph-embedder

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  prepare.sh
.github/workflows/: run_tests.yml
examples/: CMakeLists.txt  Majorminer_Example.md  example_majorminer.cpp
include/: majorminer_lib.hpp
python/: Dockerfile  README.md  chimera_graph.py  chimera_graph_view.py  docker-compose.yml  evolution.py  requirements.txt
python/docs/: Majorminer Python class diagram.drawio  make.bat
python/docs/source/: api.rst  conf.py  index.rst  overview.rst  src.drawing.rst  src.embedding.rst  src.graph.rst  src.rst  src.solver.rst
python/plots/graphs/: k_graph.py
python/plots/how_many_generations/: evolution.py  evolution_different_grid_sizes.py  evolution_different_population_sizes.py  evolution_multiprocessing.py  evolution_multiprocessing_env.py  how_many_embedded.py  how_many_embedded_and_generations.py  how_many_generations.py  how_many_generations_all.py  how_many_generations_plot.py
python/plots/how_many_generations/data/: evolution_different_probabilities_extend_to_free.py  how_many_generations_2x2_k3.txt  how_many_generations_2x2_k5.txt  how_many_generations_2x2_k7.txt  how_many_generations_2x2_k8.txt  how_many_generations_2x2_k9.txt  how_many_generations_5x5_k7.txt  how_many_generations_6x6_k8_different_grid_sizes.txt  how_many_generations_7x7_k10.txt  how_many_generations_9x9_k8_different_grid_sizes.txt  how_many_generations_k10.txt  how_many_generations_k6.txt  how_many_generations_k7.txt  how_many_generations_k9.txt  how_many_generations_nikolaus.txt  times.txt
python/plots/how_many_generations/data/evo_params/: how_many_generations_5x5_k8_population_size_14.txt  how_many_generations_5x5_k8_population_size_15.txt  how_many_generations_5x5_k8_population_size_16.txt  how_many_generations_5x5_k8_population_size_5_old.txt  how_many_generations_5x5_k8_population_size_9.txt
python/plots/how_many_generations/data/extend_to_free_prob_50_runs/: how_many_generations_5x5_50_600_max_gen_k8_extend_to_free_prob_0.0.txt  (+9 more)
python/src/: chimera_graph_view.py  embedding.py  embedding_solver.py  evolution.py
python/src/drawing/: color_util.py  draw.py  node_colors.py
python/src/embedding/: articulation_point.py  embedding.py  graph_mapping.py
python/src/graph/: chimera_graph.py  embedding_graph.py  test_graph.py  undirected_graph.py
python/src/graphs/: chimera_embedding.py  chimera_graph.py  undirected_graph.py  undirected_graphs.py
python/src/results/: chances.txt  degree_percentage.py  selection_chances.py
python/src/solver/: embedding_solver.py  evolution.py  initialization.py  k4_results.py  supernode_extension.py
python/src/util/: logging.py  stack.py  util.py
python/tests/: old_test_graphs.py  test_embedding.py  test_embedding_solver.py  test_graphs.py
src/: CMakeLists.txt  config.hpp  embedding_manager.cpp  embedding_manager.hpp  embedding_state.cpp  embedding_state.hpp  embedding_visualizer.cpp  embedding_visualizer.hpp  graph_gen.cpp  graph_gen.hpp  majorminer.cpp  majorminer.hpp  majorminer_types.hpp  network_simplex.cpp  network_simplex.hpp  utils.cpp  utils.hpp
src/common/: CMakeLists.txt  config.hpp  csc_problem.cpp  csc_problem.hpp  cut_vertex.cpp  cut_vertex.hpp  debug_utils.cpp  debug_utils.hpp  embedding_analyzer.cpp  embedding_analyzer.hpp  embedding_base.hpp  embedding_manager.cpp  embedding_manager.hpp  embedding_state.cpp  embedding_state.hpp  embedding_validator.cpp  embedding_validator.hpp  embedding_visualizer.cpp  embedding_visualizer.hpp  graph_gen.cpp  graph_gen.hpp  graph_info.cpp  graph_info.hpp  random_gen.cpp  random_gen.hpp  thread_manager.hpp  time_measurement.cpp  time_measurement.hpp  utils.cpp  utils.hpp
src/evolutionary/: CMakeLists.txt  frontier_shifting_data.cpp  frontier_shifting_data.hpp  generic_mutation.hpp  muation_manager.hpp  mutation_extend.cpp  mutation_extend.hpp  mutation_frontier_shifting.cpp  mutation_frontier_shifting.hpp  mutation_manager.cpp  mutation_manager.hpp  mutation_reduce_overlap.cpp  mutation_reduce_overlap.hpp
src/initial/: CMakeLists.txt  csc_evolutionary.cpp  csc_evolutionary.hpp  network_simplex.cpp  network_simplex.hpp  super_vertex_placer.cpp  super_vertex_placer.hpp  super_vertex_reducer.cpp  super_vertex_reducer.hpp
src/lmrp/: CMakeLists.txt  lmrp_chimera_subgraph.cpp  lmrp_chimera_subgraph.hpp  lmrp_heuristic.cpp  lmrp_heuristic.hpp  lmrp_king_subgraph.cpp  lmrp_king_subgraph.hpp  lmrp_subgraph.hpp  lmrp_types.cpp  lmrp_types.hpp
test/: CMakeLists.txt  qubo_modelling.cpp  qubo_modelling.hpp  qubo_problems.hpp  test_common.cpp  test_common.hpp  test_cut_vertex.cpp  test_graph_gen.cpp  test_lmrp.cpp  test_main.cpp  test_perf.cpp  test_qubo_modelling.cpp  test_qubo_problems.cpp  test_reducer.cpp
test/data/sample_edgelists/: pegasus.txt  simple_edgelist.txt
test/utils/: CMakeLists.txt  qubo_modelling.cpp  qubo_modelling.hpp  qubo_problems.cpp  qubo_problems.hpp  state_gen.cpp  state_gen.hpp  test_common.cpp  test_common.hpp
(+181 files in other folders)
